--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^9.3.7",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
     "base-64": "^1.0.0",
     "expo-document-picker": "~11.0.1",
     "expo-mail-composer": "^12.0.0",
     "firebase": "^9.16.0",
+    "netinfo": "^0.1.3",
     "react": "18.2.0",
     "react-native": "0.71.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
+    "react-native-svg": "^13.8.0",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
