added react native fs
for downloading data

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -151,6 +151,8 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+    //React native fs
+    implementation project(':react-native-fs')
     // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:31.2.0')
    
