--- a/ios/rediem2/Info.plist
+++ b/ios/rediem2/Info.plist
@@ -51,5 +51,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string></string>
 </dict>
 </plist>
