--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "netinfo": "^0.1.3",
     "react": "18.2.0",
     "react-native": "0.71.1",
+    "react-native-ble-manager": "^8.8.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
