--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react-native": "0.71.1",
     "react-native-ble-manager": "git+https://github.com/innoveit/react-native-ble-manager",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-csv": "^0.2.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
+    "react-native-share": "^8.2.2",
     "react-native-svg": "^13.8.0",
     "react-navigation": "^4.4.4"
   },
