--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-reanimated": "^2.14.4",
+    "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
     "react-native-share": "^8.2.2",
