--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-document-picker": "~11.0.1",
     "expo-mail-composer": "^12.0.0",
     "firebase": "^9.16.0",
+    "hoist-non-react-statics": "^3.3.2",
     "netinfo": "^0.1.3",
     "react": "18.2.0",
     "react-native": "0.71.1",
@@ -26,12 +27,17 @@
     "react-native-csv": "^0.2.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-image-picker": "^5.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.19.0",
     "react-native-share": "^8.2.2",
+    "react-native-progress": "^5.0.0",
+    "react-native-reanimated": "^3.0.2",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.8.0",
+    "react-native-uuid": "^2.0.1",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
